sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:10: error: ';' expected but ',' found.
      case true if (position_gnome == -1) => echange(position_gnome + 2, position_gnome + 1), position_gnome = position_gnome + 1
                                                                                            ^AlgGnomeSort:11: error: ';' expected but ',' found.
      case true => echange(position_gnome + 2, position_gnome + 1), position_gnome = position_gnome - 1
                                                                  ^